--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SMS Data</string>
+    <string name="app_name">SMS Data B</string>
     <string name="action_settings">Settings</string>
     <string name="debug">Test SMS</string>
 </resources>
